[package]
name = "app_runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.28.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "synchapi", "winbase"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = [ "Document", "Window", "Element"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
app = { path = "../app" }
getrandom = { version = "0.2.10", features = ["js"] }
